# ultralytics-disk-cache-hook

./: .gitignore  LICENSE.txt  MANIFEST.in  README.en.md  README.md  README.zh-CN.md  demo.train.py  pyproject.toml  setup.py  ultralytics_disk_cache_hook_auto_enable_startup.pth  ultralytics_disk_cache_hook_startup_auto_enable.py
.github/workflows/: build.yml  publish.yml
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
runs/detect/train3/: args.yaml  results.csv
runs/detect/train4/: args.yaml  results.csv
ultralytics_disk_cache_hook/: __init__.py  io.py  patch.py
